# hardware_monitor

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  build.sh  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build.yml
scripts/: release.sh
src/: main.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs
src/platform/macos/: mod.rs
src/platform/windows/: mod.rs
