[package]
name = "hardware_monitor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A hardware monitoring API service"

[dependencies]
actix-web = "4.4"
sysinfo = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15"
nvml-wrapper = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_System_Performance", "Win32_Foundation", "Win32_System_Power"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
mach = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "hardware_monitor"
path = "src/main.rs"
